# FlowPlusPlus

./: .gitignore  CHANGELOG_FIXES.md  CMakeLists.txt  Readme.md  index.html  interpreter_explained_FPP.md  license
.github/workflows/: release.yml
AppDir/: .DirIcon  AppRun  FlowPlusPlus.desktop
AppDir/usr/lib/: libIex-3_2.so.31  libIlmThread-3_2.so.31  libImath-3_1.so.29  libKF6Archive.so.6  libLerc.so.4  libOpenEXR-3_2.so.31  libOpenEXRCore-3_2.so.31  libQt6DBus.so.6  libQt6Network.so.6  libQt6PrintSupport.so.6  libQt6Svg.so.6  libQt6XcbQpa.so.6  libavif.so.16  libblkid.so.1  libbrotlienc.so.1  libcap.so.2  libcrypt.so.2  libcurl.so.4  libdav1d.so.7  libdeflate.so.0  libdouble-conversion.so.3  libduktape.so.207  libevent-2.1.so.7  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgomp.so.1  libgssapi_krb5.so.2  libheif.so.1  libhwy.so.1  libicuuc.so.77  libidn2.so.0  libjasper.so.7  libjbig.so.2.1  libjpeg.so.62  libjpegxr.so.0  libjxl.so.0.11  libjxl_cms.so.0.11  libjxl_threads.so.0.11  (+45 more)
assets/: index-4mWb759Z.js  index-BK-WE0fp.css  index-BuO3Fq-N.css  index-C5NzC9KG.css  index-CNfwUfzO.js  index-CiwK8Xhn.js  index-DSXd3UBO.js  index-Dhe0SkrS.js  index-JXbCLhQC.css  index-z22rUS-2.css
packaging/: FlowPlusPlus.desktop  io.github.abhyudayfr.FlowPlusPlus.yml
resources/: samples.qrc
samples/: calculator.fpp  countdown.fpp  even_odd.fpp  fibonacci.fpp  grade_checker.fpp  hello_world.fpp
src/: main.cpp
src/canvas/: FlowConnection.cpp  FlowConnection.h  FlowScene.cpp  FlowScene.h  FlowView.cpp  FlowView.h  MiniMap.cpp  MiniMap.h  UndoCommands.cpp  UndoCommands.h
src/interpreter/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Value.cpp  Value.h
src/nodes/: DecisionNode.cpp  DecisionNode.h  FlowNode.cpp  FlowNode.h  IONode.cpp  IONode.h  ProcessNode.cpp  ProcessNode.h  StartStopNode.cpp  StartStopNode.h
src/ui/: mainwindow.cpp  mainwindow.h
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  index.css
